--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^7.0.4",
-    "inquirer-confirm": "^2.0.7"
+    "inquirer-confirm": "^2.0.7",
+    "mysql": "^2.18.1"
   }
 }
